--- a/tictactoe.html
+++ b/tictactoe.html
@@ -1,123 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
     <style>
-        /* Styles for the header */
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #222;
-            color: #FFF;
-            padding: 20px;
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
-        }
-
-        /* Styles for the reset button */
-        #reset-button {
-            font-size: 1.2em;
-            padding: 10px;
-            background-color: #FFC0CB;
-            color: #FFF;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        #reset-button:hover {
-            background-color: #FF5E5E;
-        }
-
-        /* Styles for the main content */
-        main {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 400px;
-        }
-
-        /* Styles for the game board */
-        #board {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            grid-gap: 10px;
-            margin: 30px;
-            border: 2px solid #222;
-            border-radius: 10px;
-            background-color: #EEE;
-            padding: 20px;
-        }
-
-        /* Styles for the game cells */
-        .cell {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 5em;
-            color: #222;
-            background-color: #FFF;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .cell:hover {
-            background-color: #DDD;
-        }
-
-        /* Styles for the game status message */
-        #status {
-            margin-top: 20px;
-            font-size: 2em;
-        }
-
-        /* Styles for the "You're a loser" message */
-        #loser {
-            font-size: 3em;
-            color: #FF5E5E;
-            text-align: center;
-            display: none;
-        }
+      #game-board {
+        display: flex;
+        flex-wrap: wrap;
+        width: 300px;
+        height: 300px;
+        margin: auto;
+        border: 1px solid black;
+      }
+      #game-board div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 72px;
+        width: 100px;
+        height: 100px;
+        border: 1px solid black;
+        cursor: pointer;
+      }
     </style>
-</head>
-<body>
-    <header>
-        <h1>Tic Tac Toe</h1>
-        <button id="reset-button">Reset Game</button>
-    </header>
-
-    <main>
-        <div id="board">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-        </div>
-        <div id="status"></div>
-        <div id="loser">You're a loser!</div>
-    </main>
-
+  </head>
+  <body>
+    <h1>Tic Tac Toe</h1>
+    <div id="game-board">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <button id="reset-button">Reset</button>
     <script>
-        const board = document.getElementById("board");
-        const cells = document.querySelectorAll(".cell");
-        const status = document.getElementById("status");
-        const resetButton = document.getElementById("reset-button");
-        const loser = document.getElementById("loser");
+      let currentPlayer = "X";
+      let board = ["", "", "", "", "", "", "", "", ""];
+      const squares = document.querySelectorAll("#game-board div");
+      const resetButton = document.querySelector("#reset-button");
 
-        let currentPlayer = "X";
-        let gameEnded = false;
+      function handleMove(square, index) {
+        if (board[index] === "") {
+          square.innerHTML = currentPlayer;
+          board[index] = currentPlayer;
+          currentPlayer = currentPlayer === "X" ? "O" : "X";
+          botMove();
+        }
+      }
 
-        // Add an event listener to each
+      function botMove() {
+        let availableMoves = [];
+        for (let i = 0; i < board.length; i++) {
+          if (board[i] === "") {
+            availableMoves.push(i);
+          }
+        }
+        const randomIndex = Math.floor(Math.random() * availableMoves.length);
+        const move = availableMoves[randomIndex];
+        if (move !== undefined) {
+          squares[move].innerHTML = currentPlayer;
+          board[move] = currentPlayer;
+          currentPlayer = currentPlayer === "X" ? "O" : "X";
+        }
+      }
+
+      function checkWin() {
+        const winPatterns = [
+          [0, 1, 2],
+          [3, 4, 5],
+          [6, 7, 8],
+          [0, 3, 6],
+          [1, 4, 7],
+          [2, 5, 8],
+          [0, 4, 8],
+          [2, 4, 6],
+        ];
+        for (let i = 0; i < winPatterns.length; i++) {
+          const [a, b, c] = winPatterns[i];
+          if (board[a] !== "" && board[a] === board[b] && board[b] === board[c]) {
+            return true;
+          }
+        }
+        return false;
+      }
+
+      function checkTie() {
+        return !board.includes("");
+      }
+
+      function handleResultValidation() {
+        let roundWon = false;
+        roundWon = checkWin();
+        if (roundWon) {
+          alert(`Congratulations! Player ${currentPlayer} wins!`);
+          resetGame();
+        } else if (checkTie()) {
+          alert("Game tied!");
+          resetGame();
+        }
+      }
+
